// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ContactForm/> should error during submit data 1`] = `
"<Fragment>
  <Component id=\\"recaptcha-verify\\" onVerify={[Function (anonymous)]} />
  <p className=\\"contact-form-error\\">
    Sorry, something went wrong, please retry later...
  </p>
</Fragment>"
`;

exports[`<ContactForm/> should render 1`] = `
"<Fragment>
  <Component id=\\"recaptcha-verify\\" onVerify={[Function (anonymous)]} />
  <Formik initialValues={{...}} validationSchema={{...}} onSubmit={[Function: handleOnSubmit]}>
    [function]
  </Formik>
</Fragment>"
`;

exports[`<ContactForm/> should render 2`] = `
"<ContextProvider value={{...}}>
  <Form>
    <InputText name=\\"email\\" placeholder=\\"Your email address\\" disabled={true} />
    <InputText name=\\"subject\\" placeholder=\\"Your issue\\" disabled={true} />
    <Textarea name=\\"message\\" placeholder=\\"Your message\\" disabled={true} />
    <Checkbox name=\\"privacy\\" disabled={true}>
      <MemoizedFormattedMessage id=\\"contact.privacy_1\\" />
       
      <a href=\\"/en/privacy\\">
        <MemoizedFormattedMessage id=\\"contact.privacy_2\\" />
      </a>
    </Checkbox>
    <Button type=\\"submit\\" disabled={true}>
      <MemoizedFormattedMessage id=\\"contact.submit\\" />
    </Button>
  </Form>
</ContextProvider>"
`;

exports[`<ContactForm/> should submit data 1`] = `
"<Fragment>
  <Component id=\\"recaptcha-verify\\" onVerify={[Function (anonymous)]} />
  <p className=\\"contact-form-success\\">
    Thank you for your message! i will come back to you, as soon as possible!
  </p>
</Fragment>"
`;
